--- a/package.json
+++ b/package.json
@@ -9,6 +9,11 @@
   "author": "Assad Isah",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^16.0.3"
+    "bcrypt": "^5.1.0",
+    "dotenv": "^16.0.3",
+    "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
+    "mongoose": "^6.8.4",
+    "mongoose-unique-validator": "^3.1.0"
   }
 }
