--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "mongoose": "^6.8.4",
-    "mongoose-unique-validator": "^3.1.0"
+    "mongoose-unique-validator": "^3.1.0",
+    "nodemailer": "^6.9.1"
   }
 }
